--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -1,4 +1,5 @@
 .skills {
+  padding-top: 10px;
   padding-bottom: var(--section-padding);
 }
 
